# Audio2Face-3D-SDK

./: .gitignore  CMakeLists.txt  README.md  download_models.bat  download_models.sh  gen_testdata.bat  gen_testdata.sh  orchestrate_inference_server.bat
audio2face-sdk/: CMakeLists.txt
audio2face-sdk/source/: PLAN.md
audio2face-sdk/source/benchmarks/: executor_blendshape.cpp  executor_geometry.cpp  test_benchmark.bat  test_benchmark.sh  utils.cpp  utils.h
audio2face-sdk/source/inference-server/: CMakeLists.txt  README.md  inference_sessions.cpp  inference_sessions.h  main.cpp  websocket_server.cpp  websocket_server.h
audio2face-sdk/source/samples/: CMakeLists.txt  README.md
audio2x-sdk/: CMakeLists.txt
cmake/Modules/: FindZLIB.cmake
docs/: README.md
tools/: orchestrate_inference_server.ps1
viewer_Client/: README.md  index.html  model.gltf  serve_viewer.py  viewer.js
viewer_Client/ingest/: audio_pipeline.py  test_gradio_tts.py  tts_adapter.py
